2015-12-11  Francois Bissonnette  <fbissonn@gmail.com>

	* Informations/TODO.txt: 

2015-12-11  Francois Bissonnette  <fbissonn@gmail.com>

	* UPC.cs:
	* EAN-8.cs:
	* EAN13.cs:
	* ChangeLog:
	* Program.cs:
	* MainWindow.cs:
	* EmptyClass.cs:
	* testWindows.cs:
	* barcodeOutput.cs:
	* genericBarcode.cs:
	* gtk-gui/MainWindow.cs:
	* bin/Debug/barcodeDecryptor.xml: 

2015-12-11  Francois Bissonnette  <fbissonn@gmail.com>

	* genericBarcode.cs: Add a generic barcode template to avoid multiple class call
	* UPC.cs: update documentation
	* EAN13.cs:update documentation
	* EAN-8.cs:update documentation
	* Program.cs:update documentation
	* EmptyClass.cs:update documentation
	* MainWindow.cs:update documentation
	* barcodeOutput.cs:update documentation
	* Informations/TODO.txt:update documentation
	* Properties/AssemblyInfo.cs: update documentation
